objects/Leave_Request__c.object
<CustomObject>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LR-{000}</displayFormat>
        <label>Leave Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Earned Leave</fullName>
                </value>
                <value>
                    <fullName>Casual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Leave__c</fullName>
        <label>Reason for Leave</label>
        <type>TextArea</type>
    </fields>
</CustomObject>